@@ -1,0 +1,10 @@
+package test.reports.issue2069;
+
+import org.testng.annotations.Test;
+
+public class Dummy4 {
+
+  @Test
+  public void testngTest() {
+  }
+}
